--- a/app/views/medical_records/_form.html.erb
+++ b/app/views/medical_records/_form.html.erb
@@ -21,11 +21,11 @@
         <div class="row">
           <div class="col-md-6">
             <label><%= t('medical_records.patient_name') %></label>
-            <p class="form-control-plaintext"><%= @user.name %></p>
+            <p class="form-control-plaintext"><%= @patient.name %></p>
           </div>
           <div class="col-md-6">
             <label><%= t('medical_records.patient_email') %></label>
-            <p class="form-control-plaintext"><%= @user.email %></p>
+            <p class="form-control-plaintext"><%=  @patient.email %></p>
           </div>
         </div>
       </div>
