--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
   </h5>
   <!-- Updated search form using Bootstrap -->
   <%= form_with url: search_path, method: :get, local: true, class: 'd-flex' do %>
-    <input class="form-control me-2 mt-2" type="search" name="query" placeholder="Search" aria-label="Search" value="<%= params[:query] %>">
+    <input class="form-control me-2 " type="search" name="query" placeholder="Search" aria-label="Search" value="<%= params[:query] %>">
     <button class="btn btn-outline-primary" type="submit">
       <i class="bi bi-search"></i>
     </button>
@@ -12,12 +12,24 @@
 
   <!-- Language Dropdown -->
   <div class="dropdown ms-2" >
-  <button class="btn btn-outline-primary dropdown-toggle" type="button" id="languageDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-    <i class="bi bi-globe"></i> <%= t('language') %>
-  </button>
-  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdown">
-    <li><%= link_to 'English', url_for(locale: :en), class: 'dropdown-item' %></li>
-    <li><%= link_to 'Español', url_for(locale: :es), class: 'dropdown-item' %></li>
-  </ul>
+    <button class="btn btn-outline-primary dropdown-toggle" type="button" id="languageDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+      <i class="bi bi-globe"></i> <%= t('language') %>
+    </button>
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdown">
+      <li><%= link_to 'English', url_for(locale: :en), class: 'dropdown-item' %></li>
+      <li><%= link_to 'Español', url_for(locale: :es), class: 'dropdown-item' %></li>
+    </ul>
+  </div>
 </div>
-</div>
+
+
+<script>
+  document.addEventListener("turbolinks:load", function() {
+  // Reinitialize Bootstrap dropdowns after page load
+  var dropdownElementList = [].slice.call(document.querySelectorAll('.dropdown-toggle'))
+  var dropdownList = dropdownElementList.map(function (dropdownToggleEl) {
+    return new bootstrap.Dropdown(dropdownToggleEl)
+  })
+});
+
+  </script>
