--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,6 +1,8 @@
-<div class="container appointment-section text-center">
-  <h2><%=t 'appointments.new' %></h2>
-  <p><%=t 'appointments.book'%></p>
+
+
+
+<div class="container">
+  <h1 class="my-5 font-weight text-primary"><%= t('appointments.new') %></h1>
 
   <% if @appointment.errors.any? %>
     <div class="alert alert-danger">
@@ -12,36 +14,52 @@
     </div>
   <% end %>
 
-  <%= form_with(model: [@user, @appointment], url: user_appointments_path(@user), local: true, class: "appointment-form") do |form| %>
-    <div class="form-row">
-      <div class="form-group col-md-4">
-        <%= form.text_field :patient_name, class: "form-control", placeholder: "Your Name", value: current_user.name, readonly: true %>
+  <div class="card mb-4 shadow-sm border-0 rounded-lg">
+    <div class="card-body bg-light p-4">
+      <div class="row mb-3">
+        <div class="col-md-6 mb-3">
+          <label class="font-weight-semibold text-muted">Patient Name:</label>
+          <p class="form-control-plaintext bg-white border rounded p-2 shadow-sm"><%= current_user.name %></p>
+        </div>
+        <div class="col-md-6 mb-3">
+          <label class="font-weight-semibold text-muted">Patient Email:</label>
+          <p class="form-control-plaintext bg-white border rounded p-2 shadow-sm"><%= current_user.email %></p>
+        </div>
       </div>
-      <div class="form-group col-md-4">
-        <%= form.email_field :patient_email, class: "form-control", placeholder: "Your Email", value: current_user.email, readonly: true %>
-      </div>
+      <%= form_with(model: [@user, @appointment], url: user_appointments_path(@user), local: true, class: "appointment-form") do |form| %>
+        <div class="row mb-3">
+          <div class="col-md-6">
+            <label class="font-weight-semibold text-muted">Start Time:</label>
+            <%= form.datetime_local_field :start_time, class: "form-control bg-white border rounded p-2 shadow-sm",id: "start_time" %>
+          </div>
+          <div class="col-md-6">
+            <label class="font-weight-semibold text-muted">End Time:</label>
+            <%= form.datetime_local_field :end_time, class: "form-control bg-white border rounded p-2 shadow-sm" ,id: "end_time" %>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-12">
+            <label class="font-weight-semibold text-muted">Doctor:</label>
+            <%= form.select :doctor_id, [], { prompt: t('doctors.select') }, class: "form-control bg-white border rounded p-2 shadow-sm" ,id: "doctor_select" %>
+          </div>
+        </div>
+        <div class="mb-4">
+          <label class="font-weight-semibold text-muted">Message:</label>
+          <%= form.text_area :message, class: "form-control bg-white border rounded p-3 shadow-sm", rows: 4 %>
+        </div>
+        <div class="text-end">
+          <button type="button" class="btn btn-primary" >
+            <i class="bi bi-plus-circle"></i>   <%= form.submit t('appointments.create'), class: "btn btn-primary " %>
+          </button>
+        
+        </div>
+      <% end %>
     </div>
-    <div class="form-row">
-      <div class="form-group col-md-4">
-        <%= form.datetime_local_field :start_time, class: "form-control", placeholder: "Start Time", id: "start_time" %>
-      </div>
-      <div class="form-group col-md-4">
-        <%= form.datetime_local_field :end_time, class: "form-control", placeholder: "End Time", id: "end_time" %>
-      </div>
-      <div class="form-group col-md-4">
-        <%= form.label :doctor_id, class: "form-label" %>
-        <%= form.select :doctor_id, [], { prompt: t('doctors.select') }, class: "form-control", id: "doctor_select" %>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= form.text_area :message, class: "form-control", rows: 4, placeholder: t('message') %>
-    </div>
-    <%= form.submit t('appointments.create'), class: "btn btn-primary" %>
-  <% end %>
+  </div>
 </div>
 
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener("turbolinks:load", function() {
     var startTimeField = document.getElementById('start_time');
     var endTimeField = document.getElementById('end_time');
     var doctorSelect = document.getElementById('doctor_select');
@@ -49,10 +67,9 @@
     function fetchAvailableDoctors() {
       var startTime = startTimeField.value;
       var endTime = endTimeField.value;
-      console.log(startTime,endTime);
 
       if (startTime && endTime) {
-        var userId = <%= current_user.id %>; // Ensure this Ruby code outputs the current user's ID
+        var userId = <%= current_user.id %>;
         fetch(`/users/${userId}/appointments/available_doctors?start_time=${encodeURIComponent(startTime)}&end_time=${encodeURIComponent(endTime)}`)
           .then(response => response.json())
           .then(data => {
@@ -78,4 +95,3 @@
     endTimeField.addEventListener('change', fetchAvailableDoctors);
   });
 </script>
-
