--- a/app/views/hospitals/_form.html.erb
+++ b/app/views/hospitals/_form.html.erb
@@ -1,43 +1,51 @@
 <div class="container my-5">
   <div class="row justify-content-center">
-    <div class="col-md-8 col-lg-6">
-      <div class="bg-white p-4 rounded shadow-sm">
-        <h1 class="text-center mb-4 text-primary">
-          <%= @hospital.new_record? ? 'Create New Hospital' : 'Edit Hospital' %>
-        </h1>
+   
 
-        <%= form_with(model: @hospital, local: true) do |form| %>
-          <div class="flex">
-            <div class="form-group">
-              <%= form.label :name, class: 'form-label' %>
-              <%= form.text_field :name, class: 'form-control', placeholder: 'Hospital Name', required: true, minlength: 4, maxlength: 15 %>
-            </div>
-
-            <div class="form-group mt-3">
-              <%= form.label :location, class: 'form-label' %>
-              <%= form.text_field :location, class: 'form-control', placeholder: 'Location', required: true %>
-            </div>
-
-            <div class="form-group mt-3">
-              <%= form.label :email, class: 'form-label' %>
-              <%= form.email_field :email, class: 'form-control', placeholder: 'Email', required: true,autocomplete: true %>
-            </div>
-
-            <div class="form-group mt-3">
-              <%= form.label :license_no, class: 'form-label' %>
-              <%= form.text_field :license_no, class: 'form-control', placeholder: 'License Number', required: true %>
-            </div>
-
-            
-
-            <%= form.hidden_field :user_id, value: current_user.id %>
-
-            <div class="form-group mt-3 text-center">
-              <%= form.submit @hospital.new_record? ? 'Create Hospital' : 'Update Hospital', class: 'btn btn-primary btn-block' %>
-            </div>
+      <h2 class="text-primary mb-4 ">
+      <%= @hospital.new_record? ? 'Create New Hospital' : 'Edit Hospital' %>
+      </h2>
+    
+      
+      <%= form_with(model: @hospital, local: true) do |form| %>
+        <div class="mb-3">
+          <%= form.label :name, 'Hospital Name *', class: 'fw-bold' %>
+          <div class="input-group mt-2">
+            <span class="input-group-text"><i class="bi bi-building"></i></span>
+            <%= form.text_field :name, class: 'form-control', placeholder: 'Hospital Name', required: true, minlength: 4, maxlength: 15 %>
           </div>
-        <% end %>
-      </div>
-    </div>
+        </div>
+
+        <div class="mb-3">
+          <%= form.label :location, 'Location *', class: 'fw-bold' %>
+          <div class="input-group mt-2">
+            <span class="input-group-text"><i class="bi bi-geo-alt"></i></span>
+            <%= form.text_field :location, class: 'form-control', placeholder: 'Location', required: true %>
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <%= form.label :email, 'Email *', class: 'fw-bold' %>
+          <div class="input-group mt-2">
+            <span class="input-group-text"><i class="bi bi-envelope"></i></span>
+            <%= form.email_field :email, class: 'form-control', placeholder: 'Email', required: true, autocomplete: 'email' %>
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <%= form.label :license_no, 'License Number *', class: 'fw-bold' %>
+          <div class="input-group mt-2">
+            <span class="input-group-text"><i class="bi bi-file-earmark-text"></i></span>
+            <%= form.text_field :license_no, class: 'form-control', placeholder: 'License Number', required: true %>
+          </div>
+        </div>
+
+        <%= form.hidden_field :user_id, value: current_user.id %>
+
+        <div class="text-end mt-4">
+          <%= form.submit @hospital.new_record? ? 'Create Hospital' : 'Update Hospital', class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+   
   </div>
 </div>
