--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,58 +1,84 @@
-<div class="container d-flex justify-content-center mt-5 mb-5">
-  <div class="col-md-8 col-lg-6">
-    <div class="bg-white p-4 rounded shadow-sm">
-      <h1 class="text-center mb-4 text-primary">
+<div class="container my-5">
+  <div class="row justify-content-center">
+  
+      <h2 class="text-primary mb-4 ">
         <%= @user.new_record? ? 'Create New User' : 'Edit User' %>
-      </h1>
+      </h2>
 
-      <%= form_with(model: @user, local: true) do |f| %>
-        <%= render "devise/shared/error_messages", resource: @user %>
+      
+        <%= form_with(model: @user, local: true) do |f| %>
 
-        <div class="form-group">
-          <%= f.label :name, class: "form-label" %>
-          <%= f.text_field :name, class: "form-control", autofocus: true, required: true, minlength: 3, maxlength: 20 %>
-        </div>
+          <%= render "devise/shared/error_messages", resource: @user %>
 
-        <div class="form-group">
-          <%= f.label :email, class: "form-label" %>
-          <%= f.email_field :email, class: "form-control", autocomplete: "email", required: true %>
-        </div>
 
-        <% if @user.new_record? %>
-          <div class="form-group">
-            <%= f.label :password, class: "form-label" %>
-            <%= f.password_field :password, class: "form-control", autocomplete: "new-password", required: true, minlength: 6 %>
-            <% if @minimum_password_length %>
-              <br />
-              <em><%= @minimum_password_length %> characters minimum</em>
-            <% end %>
+      
+              <div class="mb-3 ">
+                <%= f.label :name, 'Name *', class: 'fw-bold' %>
+                <div class="input-group mt-2">
+                  <span class="input-group-text"><i class="bi bi-person"></i></span>
+                  <%= f.text_field :name, class: 'form-control', autofocus: true, required: true, minlength: 3, maxlength: 20 %>
+                </div>
+              </div>
+
+              <div class="mb-3 ">
+                <%= f.label :email, 'Email *', class: 'fw-bold' %>
+                <div class="input-group mt-2">
+                  <span class="input-group-text"><i class="bi bi-envelope"></i></span>
+                  <%= f.email_field :email, class: 'form-control', autocomplete: 'email', required: true %>
+                </div>
+              </div>
+
+              <% if @user.new_record? %>
+                <div class="mb-3 ">
+                  <%= f.label :password, 'Password *', class: 'fw-bold' %>
+                  <div class="input-group mt-2">
+                    <span class="input-group-text"><i class="bi bi-lock"></i></span>
+                    <%= f.password_field :password, class: 'form-control', autocomplete: 'new-password', required: true, minlength: 6 %>
+                  </div>
+                  <% if @minimum_password_length %>
+                    <em class="text-muted mt-2"><%= @minimum_password_length %> characters minimum</em>
+                  <% end %>
+                </div>
+
+                <div class="mb-3">
+                  <%= f.label :password_confirmation, 'Confirm Password *', class: 'fw-bold' %>
+                  <div class="input-group mt-2">
+                    <span class="input-group-text"><i class="bi bi-lock-fill"></i></span>
+                    <%= f.password_field :password_confirmation, class: 'form-control', autocomplete: 'new-password', required: true %>
+                  </div>
+                </div>
+              <% end %>
+
+              <div class="mb-3 ">
+                <%= f.label :gender, 'Gender *', class: 'fw-bold' %>
+                <div class="input-group mt-2">
+                  <span class="input-group-text"><i class="bi bi-gender-ambiguous"></i></span>
+                  <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: 'form-control', required: true %>
+                </div>
+              </div>
+
+              <div class="mb-3 ">
+                <%= f.label :role, 'Role *', class: 'fw-bold' %>
+                <div class="input-group mt-2">
+                  <span class="input-group-text"><i class="bi bi-briefcase"></i></span>
+                  <% if can?(:create, User.new(role: 'admin')) %>
+                    <% role_options = [['Admin', 'admin'], ['Staff', 'staff']] %>
+                  <% else %>
+                    <% role_options = [['Staff', 'staff']] %>
+                  <% end %>
+                  <%= f.select :role, options_for_select(role_options, f.object.role), { prompt: 'Select a role' }, class: 'form-control', required: true %>
+                </div>
+              </div>
+
+      
+
+
+          <div class="text-end mt-4">
+            <%= f.submit @user.new_record? ? 'Create User' : 'Update User', class: 'btn btn-primary' %>
           </div>
 
-          <div class="form-group">
-            <%= f.label :password_confirmation, class: "form-label" %><br />
-            <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password", required: true %>
-          </div>
+         
         <% end %>
-
-        <div class="form-group">
-          <%= f.label :gender, class: "form-label" %>
-          <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control", required: true %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :role, class: "form-label" %>
-          <% if can?(:create, User.new(role: 'admin')) %>
-            <% role_options = [['Admin', 'admin'], ['Staff', 'staff']] %>
-          <% else %>
-            <% role_options = [['Staff', 'staff']] %>
-          <% end %>
-          <%= f.select :role, options_for_select(role_options, f.object.role), { prompt: 'Select a role' }, class: "form-control", required: true %>
-        </div>
-
-        <div class="form-group text-center mt-4">
-          <%= f.submit @user.new_record? ? 'Create User' : 'Update User', class: 'btn btn-primary btn-block' %>
-        </div>
-      <% end %>
-    </div>
+      
   </div>
 </div>
