--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="col-auto col-md-2 px-sm-2 px-0 bg-primary mx-0">
+<div class="col-auto col-md-2 bg-primary">
   <div class="d-md-flex flex-column align-items-center align-items-sm-start justify-content-between px-3 pt-2 text-white min-vh-100 position-sticky top-0 bottom-0">
     <div>
       <a href="/" class="d-flex align-items-center pt-3 pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
@@ -17,19 +17,43 @@
       <ul class="nav nav-pills flex-column mb-md-auto mb-0 align-items-center align-items-md-start" id="menu">
         <li class="nav-item">
           <%= link_to profile_path, class: 'nav-link px-0 align-middle text-white' do %>
-            <i class="fs-6 bi-house"></i> <span class="ms-1 d-none d-md-inline fs-6"><%= t('sidebar.profile') %></span>
+            <i class=" bi-house"></i> <span class="ms-1 d-none d-md-inline "><%= t('sidebar.profile') %></span>
           <% end %>
         </li>
         <li class="nav-item">
           <%= link_to hospital_dashboard_path, class: 'nav-link px-0 align-middle text-white' do %>
-            <i class="fs-6 bi-speedometer2"></i> <span class="ms-1 d-none d-md-inline fs-6"><%= t('sidebar.dashboard') %></span>
+            <i class=" bi-speedometer2"></i> <span class="ms-1 d-none d-md-inline "><%= t('sidebar.dashboard') %></span>
           <% end %>
         </li>
        
         <% if current_user.owner? %>
           <li class="nav-item">
-            <%= link_to edit_hospital_path(ActsAsTenant.current_tenant.id), class: 'nav-link px-0 align-middle text-white' do %>
-              <i class="fs-6 bi-table"></i> <span class="ms-1 d-none d-md-inline fs-6"><%= t('sidebar.update_hospital_profile') %></span>
+            <%= link_to hospital_profile_path, class: 'nav-link px-0 align-middle text-white' do %>
+              <i class="bi bi-hospital"></i><span class="ms-1 d-none d-md-inline ">Hospital Profile</span>
+            <% end %>
+          </li>
+        <% end %>
+
+         <% if current_user.owner? ||  current_user.admin?%>
+          <li class="nav-item">
+            <%= link_to all_appointments_path, class: 'nav-link px-0 align-middle text-white' do %>
+              <%# <i class=" bi-table"></i> <span class="ms-1 d-none d-md-inline "><%= t('sidebar.update_hospital_profile') %>
+              <i class=" bi-table"></i> <span class="ms-1 d-none d-md-inline "><%= t('sidebar.appointments') %></span>
+
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to all_medical_records_path, class: 'nav-link px-0 align-middle text-white' do %>
+              <%# <i class=" bi-table"></i> <span class="ms-1 d-none d-md-inline "><%= t('sidebar.update_hospital_profile') %>
+               <i class=" bi-file-medical"></i> <span class="ms-1 d-none d-md-inline "><%= t('sidebar.medical_records') %></span>
+
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to all_comments_path, class: 'nav-link px-0 align-middle text-white' do %>
+              <%# <i class=" bi-table"></i> <span class="ms-1 d-none d-md-inline "><%= t('sidebar.update_hospital_profile') %>
+               <i class="bi bi-chat"></i> <span class="ms-1 d-none d-md-inline ">All comments</span>
+
             <% end %>
           </li>
         <% end %>
@@ -37,7 +61,7 @@
         <% if current_user.doctor? || current_user.patient? %>
           <li class="nav-item">
             <%= link_to user_appointments_path(current_user), class: 'nav-link px-0 align-middle text-white' do %>
-              <i class="fs-6 bi-table"></i> <span class="ms-1 d-none d-md-inline fs-6"><%= t('sidebar.appointments') %></span>
+              <i class=" bi-table"></i> <span class="ms-1 d-none d-md-inline "><%= t('sidebar.appointments') %></span>
             <% end %>
           </li>
         <% end %>
@@ -45,7 +69,7 @@
         <% if current_user.patient? %>
           <li class="nav-item">
             <%= link_to user_medical_records_path(current_user), class: 'nav-link px-0 align-middle text-white' do %>
-              <i class="fs-6 bi-file-medical"></i> <span class="ms-1 d-none d-md-inline fs-6"><%= t('sidebar.medical_records') %></span>
+              <i class=" bi-file-medical"></i> <span class="ms-1 d-none d-md-inline "><%= t('sidebar.medical_records') %></span>
             <% end %>
           </li>
         <% end %>
@@ -64,13 +88,13 @@
       <%end%>
       <li class="d-none d-md-block mt-2">
           <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-white">
-            <i class="fs-6 bi-people"></i> <span class="ms-1 d-none d-md-inline fs-6"><%= t('sidebar.people') %></span>
+            <i class=" bi-people"></i> <span class="ms-1 d-none d-md-inline "><%= t('sidebar.people') %></span>
           </a>
           <div class="collapse" id="submenu3" data-bs-parent="#menu">
             <ul class="nav flex-column">
               <% if can?(:read, User.new(role: 'admin')) || can?(:read, User.new(role: 'staff')) %>
                 <li class="nav-item">
-                  <%= link_to users_path, class: "nav-link text-white fs-6" do %>
+                  <%= link_to users_path, class: "nav-link text-white " do %>
                     <%= t('sidebar.staff') %>
                   <% end %>
                 </li>
@@ -78,7 +102,7 @@
 
               <% unless current_user.doctor? %>
                 <li class="nav-item">
-                  <%= link_to doctors_path, class: "nav-link text-white fs-6" do %>
+                  <%= link_to doctors_path, class: "nav-link text-white " do %>
                     <%= t('sidebar.doctors') %>
                   <% end %>
                 </li>
@@ -86,7 +110,7 @@
 
               <% unless current_user.patient? %>
                 <li class="nav-item">
-                  <%= link_to patients_path, class: "nav-link text-white fs-6" do %>
+                  <%= link_to patients_path, class: "nav-link text-white " do %>
                     <%= t('sidebar.patients') %>
                   <% end %>
                 </li>
@@ -99,26 +123,26 @@
         <li class="d-block d-md-none mt-2">
           <div class="dropdown pb-4">
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fs-6 bi-people"></i> <span class="ms-1 d-none d-md-block fs-6"><%= t('sidebar.people') %></span>
+              <i class=" bi-people"></i> <span class="ms-1 d-none d-md-block "><%= t('sidebar.people') %></span>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
               <% if can?(:read, User.new(role: 'admin')) || can?(:read, User.new(role: 'staff')) %>
                 <li>
-                  <%= link_to users_path, class: "dropdown-item text-white fs-6" do %>
+                  <%= link_to users_path, class: "dropdown-item text-white " do %>
                     <%= t('sidebar.staff') %>
                   <% end %>
                 </li>
               <% end %>
               <% unless current_user.doctor? %>
                 <li>
-                  <%= link_to doctors_path, class: "dropdown-item text-white fs-6" do %>
+                  <%= link_to doctors_path, class: "dropdown-item text-white " do %>
                     <%= t('sidebar.doctors') %>
                   <% end %>
                 </li>
               <% end %>
               <% unless current_user.patient? %>
                 <li>
-                  <%= link_to patients_path, class: "dropdown-item text-white fs-6" do %>
+                  <%= link_to patients_path, class: "dropdown-item text-white " do %>
                     <%= t('sidebar.patients') %>
                   <% end %>
                 </li>
@@ -133,7 +157,7 @@
       <div class="dropdown pb-4 d-flex align-items-center justify-content-center">
         <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
           <i class="fs-4 bi-person"></i>
-          <span class="d-none d-md-inline mx-1 text-truncate fs-6" style="max-width: 100px;">
+          <span class="d-none d-md-inline mx-1 text-truncate " style="max-width: 100px;">
             <%= current_user.name %>
           </span>
         </a>
