--- a/app/views/appointments/all_appointments.html.erb
+++ b/app/views/appointments/all_appointments.html.erb
@@ -47,6 +47,9 @@
         <% end %>
       </tbody>
     </table>
+    <div class="position-absolute bottom-0">
+     <%= will_paginate @paginated_appointments, renderer: BootstrapPagination::Rails %>
+    </div>
   </div>
 <% else %>
   <div class="alert alert-warning mt-4" role="alert">
