--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -2,52 +2,63 @@
   <div class="d-flex flex-row justify-content-between align-items-center mb-3 mt-5 border p-3">
     <!-- Heading -->
     <h3 class="text-primary mb-0 fs-4 fs-md-6">Comments</h3>
+   <%if current_user.id == @user.id%>
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCommentModal">
+          <i class="bi bi-plus-circle"></i> <%= t('medical_records.add_comment') %>
+        </button>
+    <%end%>
   </div>
-
   <% if @comments.empty? %>
     <h3 class="alert alert-danger">No comments</h3>
   <% else %>
-    <div class="card mb-4">
-      <div class="card-body">
-        <% @comments.each do |comment| %>
-          <div class="comment mb-3">
-            <p><strong>Commented by:</strong> <%= comment.created_by.name %> (<%= comment.created_by.role.capitalize %>)</p>
-            <p><%= comment.description %></p>
-            <p><em><%= comment.created_at.strftime('%B %d, %Y %H:%M') %></em></p>
-            
-            <!-- Action buttons for update and delete -->
-            <% if @commentable.is_a?(MedicalRecord) && @commentable.id.to_s == params[:medical_record_id] %>
-            <div class="d-flex justify-content-end">
-              <!-- Edit Button -->
-              <button type="button" class="btn btn-warning btn-sm me-2" data-bs-toggle="modal" data-bs-target="#editCommentModal-<%= comment.id %>">
-                Edit
-              </button>
-            <%end%>
-              <!-- Delete Button with Role-Specific Paths -->
-              <% if current_user.patient? %>
-                  <% if @commentable.is_a?(MedicalRecord) && @commentable.id.to_s == params[:medical_record_id] %>
-                     <%= button_to 'Delete', user_medical_record_comment_path(@user, @commentable, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: 'btn btn-danger btn-sm' %>
-                  <% else %>
-                    <%= button_to 'Delete', patient_comment_path(@user, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: 'btn btn-danger btn-sm' %>
-                  <%end%>
-              <% elsif current_user.doctor? %>
-                <% if @commentable.is_a?(MedicalRecord) && @commentable.id.to_s == params[:medical_record_id] %>
-                  <%= button_to 'Delete', user_medical_record_comment_path(@user, @commentable, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: 'btn btn-danger btn-sm' %>
-                <% else %>
-                  <%= button_to 'Delete', doctor_comment_path(@user, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: 'btn btn-danger btn-sm' %>
-                <% end %>              
-              <% elsif current_user.admin? || current_user.staff? || current_user.owner? %>
-                <% if @commentable.is_a?(MedicalRecord) && @commentable.id.to_s == params[:medical_record_id] %>
-                      <%= button_to 'Delete', user_medical_record_comment_path(@user, @commentable, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: 'btn btn-danger btn-sm' %>
-                <%else%>
-                <%= button_to 'Delete', user_comment_path(@user, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: 'btn btn-danger btn-sm' %>
-                <%end%>
-              <% end %>
+    <div class="container mt-4">
+      <% @comments.each do |comment| %>
+        <div class="border rounded p-3 mb-4 shadow-sm bg-light">
+          <div class="d-flex flex-col justify-content-between align-items-center">
+            <div class="d-flex justify-content-between w-100">
+              <p class="mb-1"><strong><%= comment.created_by.name %></strong> <small class="text-muted">(<%= comment.created_by.role.capitalize %>)</small></p>
+              <p class="text-muted small"><em><%= comment.created_at.strftime('%B %d, %Y %H:%M') %></em></p>
             </div>
           </div>
-          <hr>
-     <% if @commentable.is_a?(MedicalRecord) && @commentable.id.to_s == params[:medical_record_id] %>
-          <!-- Modal for editing a specific comment -->
+          <div class="d-flex flex-row w-100 justify-content-between">
+          <div class="mt-3 w-75">
+            <p class="mb-0"><%= comment.description %></p>
+          </div>
+          <div class="btn-group text-end d-flex gap-2">
+              <!-- Edit Button -->
+              <% if @commentable.is_a?(MedicalRecord) && @commentable.id.to_s == params[:medical_record_id] %>
+                
+                 <button type="button" class="btn btn-outline-warning btn-sm mb-auto" data-bs-toggle="modal" data-bs-target="#editCommentModal-<%= comment.id %>">
+                  Edit
+                </button>
+              <% end %>
+              <!-- Delete Button with Role-Specific Paths -->
+              <% if current_user.patient? %>
+                <% if @commentable.is_a?(MedicalRecord) && @commentable.id.to_s == params[:medical_record_id] %>
+                  <%= button_to 'Delete', user_medical_record_comment_path(@user, @commentable, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: 'btn btn-outline-danger btn-sm mb-auto ', title: 'Delete' %>
+                <% else %>
+                  <%= button_to 'Delete', patient_comment_path(@user, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: 'btn btn-outline-danger btn-sm bi bi-trash  mb-auto', title: 'Delete' %>
+                <% end %>
+              <% elsif current_user.doctor? %>
+                <% if @commentable.is_a?(MedicalRecord) && @commentable.id.to_s == params[:medical_record_id] %>
+                  <%= button_to 'Delete', user_medical_record_comment_path(@user, @commentable, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: ' mb-auto btn btn-outline-danger btn-sm bi bi-trash', title: 'Delete' %>
+                <% else %>
+                  <%= button_to 'Delete', doctor_comment_path(@user, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: '  mb-autobtn btn-outline-danger btn-sm bi bi-trash', title: 'Delete' %>
+                <% end %>
+              <% elsif current_user.admin? || current_user.staff? || current_user.owner? %>
+                <% if @commentable.is_a?(MedicalRecord) && @commentable.id.to_s == params[:medical_record_id] %>
+                  <%= button_to 'Delete', user_medical_record_comment_path(@user, @commentable, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: 'btn btn-outline-danger btn-sm bi bi-trash', title: 'Delete' %>
+                <% else %>
+                  <%= button_to 'Delete', user_comment_path(@user, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: ' mb-auto btn btn-outline-danger btn-sm bi bi-trash', title: 'Delete' %>
+                <% end %>
+              <% end %>
+            </div>
+        
+        
+        </div>
+        </div>
+        <!-- Modal for editing a specific comment -->
+        <% if @commentable.is_a?(MedicalRecord) && @commentable.id.to_s == params[:medical_record_id] %>
           <div class="modal fade" id="editCommentModal-<%= comment.id %>" tabindex="-1" aria-labelledby="editCommentModalLabel-<%= comment.id %>" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
@@ -60,9 +71,9 @@
                     <div class="form-group">
                       <%= f.label :description %>
                       <%= f.text_area :description, class: 'form-control', required: true %>
-              <div class="invalid-feedback">
-                Description can't be empty.
-              </div>
+                      <div class="invalid-feedback">
+                        Description can't be empty.
+                      </div>
                     </div>
                     <div class="form-group mt-3">
                       <%= f.submit 'Update Comment', class: 'btn btn-primary' %>
@@ -72,9 +83,45 @@
               </div>
             </div>
           </div>
-          <%end%>
+        <% end %>
+      <% end %>
+    </div>
+ 
+  <% end %>
+</div>
+<!-- Add Comment Modal -->
+<div class="modal fade" id="addCommentModal" tabindex="-1" aria-labelledby="addCommentModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addCommentModalLabel"><%= t('medical_records.add_comment') %></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <%= form_with(model: [current_user, Comment.new], url: comment_form_url(current_user), method: :post, html: { id: 'new_comment_form' }) do |f| %>
+          <div class="form-group">
+            <%= f.label :description %>
+            <%= f.text_area :description, class: 'form-control', required: true %>
+            <div class="invalid-feedback">
+              <%= t('comments.description_error') %>
+            </div>
+          </div>
+          <div class="form-group mt-3">
+            <%= f.submit t('comments.add_button'), class: 'btn btn-primary' %>
+          </div>
         <% end %>
       </div>
     </div>
-  <% end %>
+  </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
