--- a/app/views/hospitals/profile.html.erb
+++ b/app/views/hospitals/profile.html.erb
@@ -2,9 +2,11 @@
   <div class="card shadow-lg">
     <div class="card-header bg-secondary d-flex justify-content-between align-items-center">
       <h5 class="text-light">Hospital Profile</h5>
+       <% if current_user.owner? %>
       <div>
         <button id="edit-button" class="btn btn-outline-light"><i class="bi bi-pen mx-1"></i>Update</button>
       </div>
+       <% end %>
     </div>
 
     <div class="card-body">
