--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -16,21 +16,28 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-         <% if user_signed_in? %>
-  <li class="nav-item">
-    <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'btn btn-dark', data: { confirm: 'Are you sure you want to sign out?' } %>
-  </li>
+    <% if user_signed_in? %>
+      <li class="nav-item">
+        <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'btn btn-dark', data: { confirm: 'Are you sure you want to sign out?' } %>
+      </li>
 <% else %>
+
   <li class="nav-item">
     <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
   </li>
+  <%unless request.subdomain.present?%>
+  <li class="nav-item">
+        <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
+      
+  </li>
+  <%end%>
   <li class="nav-item">
         <%= link_to "Register as a Patient", new_patient_path, class: "nav-link" %>
+      
   </li>
+  
 <% end %>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
+          
         </ul>
       </div>
     </div>
