--- a/app/views/medical_records/all_medical_records.html.erb
+++ b/app/views/medical_records/all_medical_records.html.erb
@@ -63,9 +63,10 @@
       </tbody>
     </table>
 
-    <div class="position-absolute bottom-0">
-      <%= will_paginate @medical_records, class: "pagination justify-content-center mt-4" %>
+ <div class="position-absolute bottom-0">
+     <%= will_paginate @medical_records, renderer: BootstrapPagination::Rails %>
     </div>
+   
   </div>
 <% else %>
   <div class="alert alert-warning" role="alert">
