--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -26,13 +26,13 @@
           <% end %>
         </li>
        
-        <% if current_user.owner? %>
+       
           <li class="nav-item">
             <%= link_to hospital_profile_path, class: 'nav-link px-0 align-middle text-white' do %>
               <i class="bi bi-hospital"></i><span class="ms-1 d-none d-md-inline ">Hospital Profile</span>
             <% end %>
           </li>
-        <% end %>
+       
 
          <% if current_user.owner? ||  current_user.admin?%>
           <li class="nav-item">
@@ -51,7 +51,6 @@
           </li>
           <li class="nav-item">
             <%= link_to all_comments_path, class: 'nav-link px-0 align-middle text-white' do %>
-              <%# <i class=" bi-table"></i> <span class="ms-1 d-none d-md-inline "><%= t('sidebar.update_hospital_profile') %>
                <i class="bi bi-chat"></i> <span class="ms-1 d-none d-md-inline ">All comments</span>
 
             <% end %>
@@ -73,19 +72,28 @@
             <% end %>
           </li>
         <% end %>
-         <%if current_user.role == "doctor"%>
-      <div>
-      <%= link_to t('medical_records.view_comments'), doctor_comments_path(current_user), class: 'btn btn-secondary ms-2' %>
-      </div>      
-       <%elsif current_user.role == "patient"%>
-       <div>
-      <%= link_to t('medical_records.view_comments'), patient_comments_path(current_user), class: 'btn btn-secondary ms-2' %>
-      </div>      
-       <%elsif current_user.role == "admin" || current_user.role == "staff"%>
-        <div>
-      <%= link_to t('medical_records.view_comments'), user_comments_path(current_user), class: 'btn btn-secondary ms-2' %>
-      </div>     
-      <%end%>
+         <% if current_user.role == "doctor" %>
+            <li class="nav-item">
+              <%= link_to doctor_comments_path(current_user), class: 'nav-link px-0 align-middle text-white' do %>
+                <i class="bi bi-chat"></i> <span class="ms-1 d-none d-md-inline">comments</span>
+              <% end %>
+            </li>
+          <% elsif current_user.role == "patient" %>
+            <li class="nav-item">
+              <%= link_to patient_comments_path(current_user), class: 'nav-link px-0 align-middle text-white' do %>
+                <i class="bi bi-chat"></i> <span class="ms-1 d-none d-md-inline">comments</span>
+              <% end %>
+            </li>
+          <% elsif current_user.role == "admin" || current_user.role == "staff" %>
+            <li class="nav-item">
+              <%= link_to user_comments_path(current_user), class: 'nav-link px-0 align-middle text-white' do %>
+                <i class="bi bi-chat"></i> <span class="ms-1 d-none d-md-inline">comments</span>
+              <% end %>
+            </li>
+          <% end %>
+
+
+
       <li class="d-none d-md-block mt-2">
           <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-white">
             <i class=" bi-people"></i> <span class="ms-1 d-none d-md-inline "><%= t('sidebar.people') %></span>
