--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -49,7 +49,7 @@
           <%= f.label :gender, 'Gender *', class: 'fw-bold' %>
           <div class="input-group mt-2">
             <span class="input-group-text"><i class="bi bi-gender-ambiguous"></i></span>
-            <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: 'form-control', required: true %>
+            <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']],f.object.gender), {}, class: 'form-control', required: true %>
           </div>
         </div>
         
